--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,8 @@
 /.settings
 /.buildpath
 /.project
-/application/models/Proxies
-/application/tests/build
+/application/models/Proxies/*.*
+/nbproject/
+/application/tests/build/
+/application/tests/_ci_phpunit_test/tmp/
+/application/tests/_ci_phpunit_test/patcher/debug.log
