--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /application/tests/build/
 /application/tests/_ci_phpunit_test/tmp/
 /application/tests/_ci_phpunit_test/patcher/debug.log
+/application/models/Proxies/
