--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,14 @@ before_script:
   - echo "GRANT ALL ON ppdb.* TO 'ppdb'@'localhost';" | mysql -u root
   - vendor/bin/doctrine orm:schema-tool:drop --force
   - vendor/bin/doctrine orm:schema-tool:create
-  - cd application/tests/
-  
+
 script:
+  - cd application/tests/
   - ../../vendor/phpunit/phpunit/phpunit
+  
+after_script:
+  - cd ../..
+  - if [[ "$TRAVIS_PHP_VERSION" == "5.5" ]]; then php vendor/bin/coveralls -v; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/bin/coveralls -v; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then php vendor/bin/coveralls -v; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "7" ]]; then php vendor/bin/coveralls -v; fi
