--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ php:
   - 5.5
   - 5.6
   - hhvm
-  - 7
   
 before_script:
-  - composer install
+  - composer --self-update
+  - composer install --dev
   - mysql -e 'create database ppdb;'
   - echo "CREATE USER 'ppdb'@'localhost' IDENTIFIED BY 'ppdb';" | mysql -u root
   - echo "GRANT ALL ON ppdb.* TO 'ppdb'@'localhost';" | mysql -u root
@@ -19,7 +19,4 @@ script:
   
 after_script:
   - cd ../..
-  - if [[ "$TRAVIS_PHP_VERSION" == "5.5" ]]; then php vendor/bin/coveralls -v; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/bin/coveralls -v; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then php vendor/bin/coveralls -v; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == "7" ]]; then php vendor/bin/coveralls -v; fi
+  - pphp vendor/bin/coveralls -v
