--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - hhvm
   
 before_script:
-  - composer --self-update
+  - composer self-update
   - composer install --dev
   - mysql -e 'create database ppdb;'
   - echo "CREATE USER 'ppdb'@'localhost' IDENTIFIED BY 'ppdb';" | mysql -u root
