--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,6 +1,4 @@
-[yaml gutter=”false”]
-src_dir: lib
-coverage_clover: tests/logs/clover.xml
-json_path: application/tests/build/logs/clover.xml
+src_dir: /
+coverage_clover: application/tests/build/logs/clover.xml
+json_path: application/tests/build/logs/coveralls-upload.json
 service_name: travis-ci
-[/yaml]
