halaman profil, Next: Halaman Rekap & Print, setelah itu baru buat halaman daftar pendaftar lalu fungsi-fungsi admin... (kerjaan masih banyak)

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 
 script:
   - cd application/tests/
-  - ../../vendor/phpunit/phpunit/phpunit
+  - ../../vendor/phpunit/phpunit/phpunit --coverage-text
   
 after_script:
   - cd ../..
