--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require-dev": {
     	"phpunit/phpunit": "5.6.*",
     	"kenjis/ci-phpunit-test": "0.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "1.*"
     },
     "autoload": {
             "psr-0": {"": "application/models/Entities"}
