--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require-dev": {
     	"phpunit/phpunit": "6.*",
     	"kenjis/ci-phpunit-test": "0.*",
-        "satooshi/php-coveralls": "1.*"
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload": {
             "psr-0": {"": "application/models/Entities"}
