--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /application/tests/_ci_phpunit_test/patcher/debug.log
 /application/models/Proxies/
 /.phpintel
+/application/libraries/codeigniter-doctrine/
