--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,15 @@
     "description": "Form Pendaftaran PPDB SMAIT Ihsanul Fikri",
     "type": "application",
     "require": {
-        "phpoffice/phpexcel": "1.8.*",
-		"imagine/imagine": "0.6.*",
+		"imagine/imagine": "1.*",
         "kenjis/codeigniter-doctrine": "1.0.x@dev",
 		"gregwar/captcha": "1.*",
-        "mikehaertl/phpwkhtmltopdf": "^2.1"
+        "mikehaertl/phpwkhtmltopdf": "^2.1",
+        "phpoffice/phpspreadsheet": "^1.9"
     },
     "require-dev": {
     	"phpunit/phpunit": "6.*",
-    	"kenjis/ci-phpunit-test": "0.*",
-        "php-coveralls/php-coveralls": "^2.1"
+    	"kenjis/ci-phpunit-test": "0.*"
     },
     "autoload": {
             "psr-0": {"": "application/models/Entities"}
