--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "phpoffice/phpspreadsheet": "^1.9"
     },
     "require-dev": {
-    	"phpunit/phpunit": "6.*",
-    	"kenjis/ci-phpunit-test": "0.*"
+    	"phpunit/phpunit": "7.5.*",
+    	"kenjis/ci-phpunit-test": "1.0.x-dev"
     },
     "autoload": {
             "psr-0": {"": "application/models/Entities"}
