--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "phpoffice/phpspreadsheet": "^1.9"
     },
     "require-dev": {
-    	"phpunit/phpunit": "7.5.*",
-    	"kenjis/ci-phpunit-test": "1.0.x-dev"
+    	"phpunit/phpunit": "9.*",
+    	"kenjis/ci-phpunit-test": "3.*"
     },
     "autoload": {
             "psr-0": {"": "application/models/Entities"}
