--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "doctrine/cache": "1.*",
 		"gregwar/captcha": "1.*",
         "mikehaertl/phpwkhtmltopdf": "^2.1",
-        "phpoffice/phpspreadsheet": "^1.9"
+        "phpoffice/phpspreadsheet": "^1.9",
+        "league/commonmark": "^2.4"
     },
     "require-dev": {
     	"phpunit/phpunit": "9.*",
